# mldonkey-next

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  package-lock.json  package.json  update_icon.sh
app/: .gitignore  CMakeLists.txt  MLWebEngineView.qml  MLWebView.qml  Main.qml  build_angular_resources.sh  build_webapp.sh  create_qt_resource_files.sh  luke.mldonkeynext.json  main.cpp  mlqmlutils.cpp  mlqmlutils.h  mlsettings.cpp  mlsettings.h  mlwebsocketbridge.cpp  mlwebsocketbridge.h  resources_root.cmake  resources_subdir.cmake  svg2png_android.json  update_icon.sh  version.h.in
app/android/: AndroidManifest.xml  build.gradle
app/android/res/values/: colors.xml  styles.xml
app/appimage/: AppImageBuilder.yml
app/flatpak/: org.duckdns.bugfreeblog.mldonkeynext.desktop  org.duckdns.bugfreeblog.mldonkeynext.json  org.duckdns.bugfreeblog.mldonkeynext.metainfo.xml
mldonkey-next-backend/: package-lock.json  package.json  sea-config.json  webpack.config.js
mldonkey-next-backend/src/: main.ts
mldonkey-next-backend/src/core/: MLBridge.ts  MLBridgeManager.ts  MLConstants.ts  MLLogger.ts
mldonkey-next-frontend/: .eslintrc.json  README.md  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
mldonkey-next-frontend/src/: index.html  main.ts  styles.scss
mldonkey-next-frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  auth.guard.ts  websocket-service.service.ts
mldonkey-next-frontend/src/app/components/: components.module.ts
mldonkey-next-frontend/src/app/components/bandwidth-summary/: bandwidth-summary.component.html  bandwidth-summary.component.scss  bandwidth-summary.component.spec.ts  bandwidth-summary.component.ts
mldonkey-next-frontend/src/app/components/chunks-diagram/: chunks-diagram.component.html  chunks-diagram.component.scss  chunks-diagram.component.spec.ts  chunks-diagram.component.ts
mldonkey-next-frontend/src/app/components/follow-content-view/: follow-content-view.component.html  follow-content-view.component.scss  follow-content-view.component.spec.ts  follow-content-view.component.ts
mldonkey-next-frontend/src/app/components/input-with-icon/: input-with-icon.component.html  input-with-icon.component.scss  input-with-icon.component.spec.ts  input-with-icon.component.ts
mldonkey-next-frontend/src/app/components/spinner/: spinner.component.html  spinner.component.scss  spinner.component.ts
mldonkey-next-frontend/src/app/components/turtle-icon/: turtle-icon.component.spec.ts  turtle-icon.component.ts
mldonkey-next-frontend/src/app/core/: MLCollectionModel.ts  MLCountryCode.ts  MLDownloadManager.ts  MLLogger.ts  MLMessage.ts  MLMinProtoErr.ts  MLMsg.ts  MLMsgConsole.ts  MLMsgDownload.ts  MLMsgFileInfo.ts  MLMsgNetInfo.ts  MLMsgQuery.ts  MLMsgReader.ts  MLNetworkManager.ts  MLObservableVariable.ts  MLOptionManager.ts  MLResultInfoManager.ts  MLSearchInfoManager.ts  MLSearchManager.ts  MLSearchResultManager.ts  MLSearchSessionManager.ts  MLServerManager.ts  MLSharedFileManager.ts  MLSingleSearchModel.ts  MLSortMode.ts  MLSubscriptionSet.ts  MLUpdateable.ts  MLUtils.ts  extensions.ts  index.d.ts  pretty-bytes.pipe.ts  pretty-time.ppe.ts
mldonkey-next-frontend/src/app/css/: shared.scss
mldonkey-next-frontend/src/app/data/: MLDownloadFileInfo.ts  MLResultInfo.ts  MLSearchInfo.ts  MLSearchQuery.ts  MLSearchResult.ts
mldonkey-next-frontend/src/app/login/: login.component.html  login.component.scss  login.component.ts
mldonkey-next-frontend/src/app/msg/: MLAddr.ts  MLClientKind.ts  MLFileComment.ts  MLHostState.ts  MLHostname.ts  MLIp2.ts  MLMsg.ts  MLMsgClientInfo.ts  MLMsgClientStats.ts  MLMsgConsole.ts  MLMsgDownload.ts  MLMsgFileInfo.ts  MLMsgNetInfo.ts  MLMsgOptions.ts  MLMsgOptionsinfo.ts  MLMsgQuery.ts  MLMsgReader.ts  MLMsgRemoveDownload.ts  MLMsgSearch.ts  MLMsgServer.ts  MLMsgSharedFileInfo.ts  MLMsgStats.ts  MLMsgSysInfo.ts  MLMsgUploaders.ts  MLSubFile.ts  MLTag.ts  MLtag.ts
mldonkey-next-frontend/src/app/private/home/: home.component.html  home.component.scss  home.component.ts
mldonkey-next-frontend/src/app/private/home/about/: about.component.html  about.component.scss  about.component.ts
mldonkey-next-frontend/src/app/private/home/console/: console.component.html  console.component.scss  console.component.ts
mldonkey-next-frontend/src/app/private/home/corelogs/: corelogs.component.html  corelogs.component.scss  corelogs.component.spec.ts  corelogs.component.ts  scroll.ts
mldonkey-next-frontend/src/app/private/home/download/: download.component.html  download.component.scss  download.component.ts
mldonkey-next-frontend/src/app/private/home/help/: help.component.html  help.component.scss  help.component.spec.ts  help.component.ts
mldonkey-next-frontend/src/app/private/home/options/: options.component.html  options.component.scss  options.component.ts
mldonkey-next-frontend/src/app/private/home/search/: search.component.html  search.component.scss  search.component.ts
mldonkey-next-frontend/src/app/private/home/section-title/: section-title.component.html  section-title.component.scss  section-title.component.spec.ts  section-title.component.ts
mldonkey-next-frontend/src/app/public/: auth-failed.ts  public-routing.module.ts  public.component.html  public.component.scss  public.component.ts  public.module.ts
mldonkey-next-frontend/src/app/services/: clientstats.service.spec.ts  clientstats.service.ts  console.service.ts  downloading-files.service.spec.ts  downloading-files.service.ts  options.service.ts  searches.service.spec.ts  searches.service.ts  servers.service.spec.ts  servers.service.ts  sharedfilesinfo.service.spec.ts  sharedfilesinfo.service.ts  spinner.service.ts  stats.service.ts  storage.service.ts  sysinfo.service.spec.ts  sysinfo.service.ts  ui-service.service.spec.ts  ui-service.service.ts  uploads.service.spec.ts  uploads.service.ts
mldonkey-next-frontend/src/environments/: environment.development.ts  environment.ts
src/: main.ts
src/core/: MLLogger.ts
src/data/: MLMessage.ts
(+42 files in other folders)
